--- a/content/payments/billpay/pre-built-screens/quickstart/api.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/api.mdx
@@ -2,7 +2,7 @@
 sidebar_title: API
 page_title: BBPS Billpay API
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## API integration
